[package]
name = "probing-python"
description = "Python support for probing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
probing-cc = { path = "../cc" }
probing-core = { path = "../../core" }
probing-proto = { path = "../../proto" }

anyhow = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

ctor = { version = "0.3.6", features = [] }
include_dir = "=0.7.4"
pyo3 = { version = "0.23.4", features = [
    "abi3",
    "abi3-py37",
    "extension-module",
    "auto-initialize",
] }
inferno = { version = "0.12.1", default-features = false, features = [
    "nameattr",
    "multithreaded",
] }
pprof = { version = "0.14.0", features = [
    "cpp",
    "flamegraph",
    "frame-pointer",
] }
signal-hook-registry = "1.4.2"

[dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.23.2"
