[package]
name = "probing-python"
description = "Python support for probing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
probing-cc = { path = "../cc" }
probing-core = { path = "../../core" }
probing-proto = { path = "../../proto" }
probing-store = { path = "../../crates/store" }

anyhow = { workspace = true }
ctor = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

py-spy= { version = "0.4.0"}
include_dir = "=0.7.4"
backtrace = { version = "0.3", features = ["cpp_demangle", "std"] }
cpp_demangle = "0.3"
pyo3 = { version = "0.25.1", default-features = false, features = [
    "abi3",
    "abi3-py37",
    # "extension-module",
    "auto-initialize",
    "macros"
] }
inferno = { version = "0.12.1", default-features = false, features = [
    "nameattr",
    "multithreaded",
] }
pprof = { version = "0.14.0", features = [
    "cpp",
    "flamegraph",
    "frame-pointer",
] }
lazy_static = "1.4.0"
async-trait = "0.1.83"
signal-hook-registry = "1.4.2"

[dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.25.1"
