[package]
name = "probing-python"
description = "Python support for probing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
extension-module = ["pyo3/extension-module"]
tracing = []
default = ["extension-module", "tracing"]

[dependencies]
probing-cc = { path = "../cc" }
probing-core = { path = "../../core" }
probing-proto = { path = "../../proto" }
probing-store = { path = "../../crates/store" }
probing-pprof = { path = "../../crates/pprof" }

anyhow = { workspace = true }
ctor = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

include_dir = "=0.7.4"
backtrace = { version = "0.3", features = ["cpp_demangle", "std"] }
cpp_demangle = "0.4.4"
pyo3 = { version = "0.25.1", default-features = false, features = [
    "abi3",
    "abi3-py310",
    # "extension-module",
    "auto-initialize",
    "macros"
] }
inferno = { version = "0.12.1", default-features = false, features = [
    "nameattr",
    "multithreaded",
] }
lazy_static = "1.4.0"
async-trait = "0.1.83"
signal-hook-registry = "1.4.2"
regex = ">=1.6.0"
smallvec = "1.7"

[dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.25.1"
